# readsProfiler

./: .gitmodules  CMakeLists.txt
client/: AbstractDrawable.h  Filter.cpp  Filter.h  Genre.cpp  Genre.h  LibraryTable.cpp  LibraryTable.h  LoginWindow.cpp  LoginWindow.h  RequestHandler.cpp  RequestHandler.h  client.cpp  dummyClient.cpp  include.h  mainwindow.cpp  mainwindow.h  readWindow.cpp  readWindow.h
common/: Socket.h
dependencies/: include.h
server/: ClientThread.cpp  ClientThread.h  Server.cpp  Server.h
server/data/: accounts.json  lib.json  stats.json
server/data/books/: 0.txt  1.txt  2.txt
